<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/baseColor">

        <LinearLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/teamABack"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:contentDescription="@string/cd1"
                    android:src="@drawable/team1" />

                <TextView
                    style="@style/Style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/text_padding"
                    android:text="@string/teamA"
                    android:textSize="@dimen/teamnamesize" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/Style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/text_padding"
                    android:text="@string/defaultvalue"
                    android:textSize="@dimen/score_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@color/teamAButton"
                    android:onClick="addSixForTeamA"
                    android:text="@string/plus6" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@color/teamAButton"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/plus3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@color/teamAButton"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/plus2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@color/teamAButton"
                    android:onClick="addOneForTeamA"
                    android:text="@string/plus1" />

                <TextView
                    style="@style/Style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/text_padding"
                    android:text="@string/foultext" />

                <TextView
                    android:id="@+id/team_a_fouls"
                    style="@style/Style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/text_padding"
                    android:text="@string/defaultvalue"
                    android:textSize="@dimen/foul_size" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@color/foulColor"
                    android:onClick="addFoulForTeamA"
                    android:text="@string/plus1foul" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/teamBBack"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:contentDescription="@string/cd2"
                    android:src="@drawable/team2" />

                <TextView
                    style="@style/Style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/text_padding"
                    android:text="@string/teamB"
                    android:textSize="@dimen/teamnamesize" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/Style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/text_padding"
                    android:text="@string/defaultvalue"
                    android:textSize="@dimen/score_size" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@color/teamBButton"
                    android:onClick="addSixForTeamB"
                    android:text="@string/plus6" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@color/teamBButton"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/plus3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@color/teamBButton"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/plus2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@color/teamBButton"
                    android:onClick="addOneForTeamB"
                    android:text="@string/plus1" />

                <TextView
                    style="@style/Style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/text_padding"
                    android:text="@string/foultext" />

                <TextView
                    android:id="@+id/team_b_fouls"
                    style="@style/Style1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/text_padding"
                    android:text="@string/defaultvalue"
                    android:textSize="@dimen/foul_size" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/button_margin"
                    android:background="@color/foulColor"
                    android:onClick="addFoulForTeamB"
                    android:text="@string/plus1foul" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_layout"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/default_margin"
            android:background="@color/foulColor"
            android:onClick="resetScore"
            android:text="@string/reset" />
    </RelativeLayout>

</ScrollView>